# instagram-mcp

./: .env.example  .gitignore  CLAUDE.md  MAUTRIX_CODE_SNIPPETS.md  MAUTRIX_DATA_FLOW.md  MAUTRIX_MQTT_ANALYSIS.md  MAUTRIX_QUICK_REF.md  MAUTRIX_README.md  MQTTOT_FLOW_DIAGRAM.md  MQTTOT_PROTOCOL_ANALYSIS.md  MQTTOT_PYTHON_STARTER.py  MQTTOT_QUICK_REFERENCE.md  README.md  mypy.ini  pyproject.toml  ruff.toml
.claude/skills/dm/: SKILL.md
.claude/skills/dm/protocol/: loop.md  planning.md  reconnaissance.md  resume.md
.claude/skills/dm/templates/: history.md  identity.md  memory.md  strategy.md  target.md
scratch/mqtt_poc/: mqtt_listen.py  mqtt_test_v1_raw_socket.py  mqtt_test_v2_paho.py  mqtt_test_v3_debug.py  mqtt_test_v4_matrix.py
src/instagram_mcp/: __init__.py  client.py  config.py  server.py
src/instagram_mcp/models/: __init__.py  schemas.py
src/instagram_mcp/mqtt/: __init__.py  connection.py  events.py  manager.py  parser.py  router.py  thrift.py  topics.py
src/instagram_mcp/tools/: __init__.py  media.py  messages.py  threads.py
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_event_types.py  test_manager_methods.py  test_mqtt_pipeline.py  test_reconnect.py  test_send_and_check.py  test_wait_for_reply.py
tests/integration/: __init__.py  test_server.py
tests/unit/: __init__.py  test_client.py  test_config.py  test_models.py  test_mqtt_connection.py  test_mqtt_manager.py  test_mqtt_parser.py  test_mqtt_router.py  test_mqtt_thrift.py  test_server.py  test_tools_media.py  test_tools_messages.py  test_tools_threads.py
