[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/instagram_mcp"]

[project]
name = "instagram-mcp"
version = "0.1.0"
description = "Enterprise-grade MCP server for Instagram Direct Message handling"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Bryan Tran" }]
keywords = ["mcp", "instagram", "direct-messages", "instagrapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "instagrapi>=2.2.1",
    "mcp[cli]>=1.26.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
instagram-mcp = "instagram_mcp.server:main"
instagram-mcp-login = "instagram_mcp.client:interactive_login"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/instagram_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 100
show_missing = true
